# riftbounddecks

./: .gitignore  AGENTS.md  API.md  CHANGELOG.md  DEPLOYMENT.md  PLAN.md  README.md  SETUP.md  TODO.md
.github/workflows/: deploy-test.yml
backend/: .gitignore  Dockerfile  README.md  SETUP.md  TODO.md  __init__.py  package-lock.json  package.json  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: client.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/cards/: cards.json  cards.json.real
backend/scripts/: init-master-key.js
backend/src/: index.js
backend/src/config/: database.js  logger.js  masterKey.js
backend/src/middleware/: auth.js  errorHandler.js  requestLogger.js
backend/src/models/: Deck.js  RefreshToken.js  RegistrationKey.js  RegistrationUsage.js  User.js  UserPreferences.js
backend/src/routes/: auth.js  cards.js  decks.js  user.js
backend/src/utils/: sanitize.js
backend/tests/: conftest.py  test_main.py
backend/tests/core/: test_config.py  test_security.py
backend/tests/db/: test_client.py
backend/tests/models/: test_user.py
backend/tests/schemas/: test_user_schema.py
docs/: README.md  setup.md  troubleshooting.md
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
infra/: docker-compose.test.yml
scripts/: cards.json  cards.py  deploy-backend.sh  deploy.sh  new.json  nginx-rift.basedboats.com.conf  rift-backend.service
worker/: .gitignore  Dockerfile  official.py  requirements.txt
(+40 files in other folders)
