[project]
name = "riftbound-backend"
version = "0.1.0"
description = "FastAPI backend for the Riftbound deckbuilder"
authors = [{ name = "Riftbound Team" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "motor>=3.3.1",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.1.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<5",  # avoid upstream breakage triggered by passlib's backend detection
  "httpx>=0.27.0",
  "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "freezegun>=1.4.0",
  "mongomock-motor>=0.0.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
